# moveformer

./: LICENSE  README.md  environment.yml  pyproject.toml  requirements-notebook.txt  requirements.txt
.github/workflows/: lint.yml
config/: forecast_mbk+ung_12h_sel_nofut.yaml  forecast_mbk+ung_12h_sel_nofut_ctx1.yaml
data/geo/: worldclim.ipynb
data/movebank/: .gitignore  download.ipynb  individual_vars.ipynb  to_parquet.ipynb
data/movebank+ungulates/: explore_12h.ipynb  individual2taxon_emb.pickle  individuals.parquet  merge.ipynb  sample_12h.ipynb
data/ungulates/: individual_vars.ipynb  to_parquet.ipynb
exp/forecast_mbk+ung_12h/geo-transformers/2rygu3l4/: config.yaml
exp/forecast_mbk+ung_12h/geo-transformers/2u6ajp2u/: config.yaml
exp/forecast_mbk+ung_12h/geo-transformers/37ld98g9/: config.yaml
exp/forecast_mbk+ung_12h/geo-transformers/vdv96ee1/: config.yaml
geo_transformers/: cli.py  constants.py  data_loading.py  geo_utils.py  nn.py  notebook_utils.py  num_utils.py  training_utils.py  trajectory.py
geo_transformers/datasets/: __init__.py  worldclim_bio_reader.py
geo_transformers/models/: any_horizon_forecast_transformer.py
sandbox/: mbk+ung_12h_cent.ipynb  mbk+ung_12h_eval.ipynb  mbk+ung_12h_eval_results.csv  mbk+ung_12h_feat_imp.ipynb  mbk+ung_12h_feat_imp_results.csv  movebank+ungulates_12h_id2sampler.pickle  movebank+ungulates_12h_stats.ipynb
